crash when scrubbing in the graph editor. #64143

Closed
opened 2019-05-04 16:40:26 +02:00 by Zino Guerr · 7 comments

System Information
windows 10 64 bits
GTX 1050 TI latest driver.

Blender Version
Broken: 2.80.60 hash : 94a064c0e9

Short description of error
scrubbing in the graph editor is an instant crash.

Exact steps for others to reproduce the error
switch to graph editor and scrub the play-head, crashes even without adding keyframes.

**System Information** windows 10 64 bits GTX 1050 TI latest driver. **Blender Version** Broken: 2.80.60 hash : 94a064c0e958 **Short description of error** scrubbing in the graph editor is an instant crash. **Exact steps for others to reproduce the error** switch to graph editor and scrub the play-head, crashes even without adding keyframes.
Author

Added subscriber: @Znio.G

Added subscriber: @Znio.G

Added subscribers: @Sergey, @WilliamReynish

Added subscribers: @Sergey, @WilliamReynish
Sergey Sharybin was assigned by William Reynish 2019-05-04 16:42:47 +02:00

@Sergey The crash seems to be related to recent work on the sound subsystem you did.

Feel free to re-assign if you think that's wrong.

@Sergey The crash seems to be related to recent work on the sound subsystem you did. Feel free to re-assign if you think that's wrong.

Here's a backtrace:

# backtrace
0   blender                             0x0000000103469247 BLI_system_backtrace + 55
1   blender                             0x0000000103208699 sig_handle_crash + 361
2   libsystem_platform.dylib            0x00007fff629d2b5d _sigtramp + 29
3   ???                                 0x0000000100000000 0x0 + 4294967296
4   blender                             0x00000001033cec0d BKE_sound_seek_scene + 157
5   blender                             0x0000000107308d48 graphview_cursor_apply + 264
6   blender                             0x0000000107308b04 graphview_cursor_invoke + 132
7   blender                             0x000000010370086e wm_operator_invoke + 542
8   blender                             0x0000000103701e10 wm_handler_operator_call + 576
9   blender                             0x00000001037016ec wm_handlers_do_intern + 2268
10  blender                             0x00000001036fcf5f wm_handlers_do + 31
11  blender                             0x00000001036fc9a5 wm_event_do_handlers + 2277
12  blender                             0x00000001036f6680 WM_main + 32
13  blender                             0x0000000103204ed6 main + 934
14  libdyld.dylib                       0x00007fff627ed3d5 start + 1
15  ???                                 0x0000000000000001 0x0 + 1

Here's a backtrace: ``` # backtrace 0 blender 0x0000000103469247 BLI_system_backtrace + 55 1 blender 0x0000000103208699 sig_handle_crash + 361 2 libsystem_platform.dylib 0x00007fff629d2b5d _sigtramp + 29 3 ??? 0x0000000100000000 0x0 + 4294967296 4 blender 0x00000001033cec0d BKE_sound_seek_scene + 157 5 blender 0x0000000107308d48 graphview_cursor_apply + 264 6 blender 0x0000000107308b04 graphview_cursor_invoke + 132 7 blender 0x000000010370086e wm_operator_invoke + 542 8 blender 0x0000000103701e10 wm_handler_operator_call + 576 9 blender 0x00000001037016ec wm_handlers_do_intern + 2268 10 blender 0x00000001036fcf5f wm_handlers_do + 31 11 blender 0x00000001036fc9a5 wm_event_do_handlers + 2277 12 blender 0x00000001036f6680 WM_main + 32 13 blender 0x0000000103204ed6 main + 934 14 libdyld.dylib 0x00007fff627ed3d5 start + 1 15 ??? 0x0000000000000001 0x0 + 1 ```

This issue was referenced by 773691310f

This issue was referenced by 773691310f9479a7de9b01f13fbbdc5d45c1c47e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by 2b9965122e

This issue was referenced by 2b9965122e132a2c25652ebf62d6353183f0f644
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64143
No description provided.