Fix T64143: Crash when scrubbing in the graph editor