source/blender/editors/space_clip/clip_ops.c
@@ -971,7 +971,7 @@ static void change_frame_apply(bContext *C, wmOperator *op)
   SUBFRA = 0.0f;
 
   /* do updates */
-  BKE_sound_seek_scene(CTX_data_main(C), scene);
+  BKE_sound_update_and_seek(CTX_data_main(C), CTX_data_depsgraph(C));
   WM_event_add_notifier(C, NC_SCENE | ND_FRAME, scene);
 }
 
